# retro-sync

./: .gitignore  .gitmodules  BOOTSTRAP_STRATEGY.md  Cargo.toml  ECONOMICS_ANALYSIS.md  Makefile  PENTEST_REPORT_FULL.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2026.md  flake.nix  index.html  package-lock.json  package.json  replit.md  retro-sync.toml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json
.github/workflows/: ci.yml  deploy.yml
apps/api-server/: Cargo.toml
apps/api-server/src/: audio_qc.rs  auth.rs  bbs.rs  btfs.rs  bttc.rs  bwarm.rs  cmrra.rs  coinbase.rs  collection_societies.rs  ddex.rs  ddex_gateway.rs  dqi.rs  dsp.rs  dsr_parser.rs  durp.rs  fraud.rs  gtms.rs  hyperglot.rs  identifiers.rs  isni.rs  iso_store.rs  kyc.rs  langsec.rs  ledger.rs  main.rs  metrics.rs  mirrors.rs  moderation.rs  multisig_vault.rs  music_reports.rs  nft_manifest.rs  persist.rs  privacy.rs  publishing.rs  rate_limit.rs  royalty_reporting.rs  sap.rs  sftp.rs  shard.rs  takedown.rs  (+5 more)
apps/api-server/tests/: integration_isni_cmrra_bbs_societies.rs
apps/api-server/xslt_transforms/: apra_amcos.xsl  gema.xsl  jasrac.xsl  nordic.xsl  prs.xsl  sacem.xsl  samro.xsl  socan.xsl  work_registration.xsl
apps/rust-sandbox/: Cargo.toml
apps/rust-sandbox/src/: main.rs
apps/wasm-frontend/: Cargo.toml  index.html
apps/wasm-frontend/src/: lib.rs
attached_assets/: Pasted-1-Artists-Upload-music-to-your-platform-Music-is-distri_1774118804267.txt  Pasted-1-Artists-Upload-music-to-your-platform-Music-is-distri_1774118888848.txt
catalog/: artists.json  mint_log.json  retro-sync.cwr  works.json
circuits/: circomlib  nft71.circom
datasets/: SOP-RETROSYNC-PUB-001.md  midi-classical-data
docs/: API-ABSTRACTION.md  CUSTOMER-ONBOARDING.md  GETTING-STARTED.md  SOP-ONBOARD.md  dashboard.html  index.html  menu.html  whitepaper.md
fixtures/: Cargo.toml  HURRIAN.md  PLAN.md
fixtures/data/: hurrian_h6.txt  references.txt  sources_41.txt  youtube_sources.txt
fixtures/data/responses/: 20260326_190542_untitled.txt  20260326_192720_this_is_the_cleanest_most_disciplined_version_of_your_theory_so_far_you_ve_done_something_importan.txt  20260326_192731_this_req_cft_26d_serves_as_the_critical_summary_and_closure_for_the_retro_sync_pipeline_by_ma.txt  20260326_194330_this_is_the_point_where_your_system_stops_being_just_expressive_and_starts_being_almost_formal_th.txt  20260326_194403_thank_you_for_the_final_synthesis_req_cft_26d_elegantly_unifies_the_ontological_framework_the_26_di.txt
fixtures/examples/: interval_prime.rs  nft71.rs  nft71_ppm_stego.rs  nft71_prove.rs  nft71_stego.rs  nft71_stego_svg.rs  nft71_svg.rs  nft71_witness.rs  smoke.rs  verify_stego.rs
fixtures/lilypond/: h6_west.ly
fixtures/output/: classical_baseline.json  classical_ingest.json  composer_rotations.json  cuneiform_invariants.json  cuneiform_strokes.json  era_analysis.json  h6_west.midi  hymn_codec_comparison.json  hymn_compression.json  hymn_j_invariant.json  hymn_self_describing.json  hymn_stability.json  retro-sync.tar  yt_01.midi  yt_04.midi  yt_06.midi  yt_07.midi  yt_08.midi
fixtures/output/nft71_svg/: gallery.html
fixtures/output/sources/analysis/: yt_01.notes  yt_01.witness.json  yt_04.notes  yt_04.witness.json  yt_06.notes  yt_06.witness.json  yt_07.notes  yt_07.witness.json  yt_08.notes  yt_08.witness.json
fixtures/output/sources/audio/: yt_01.info.json  yt_04.info.json  yt_06.info.json  yt_07.info.json  yt_08.info.json
fixtures/output/sources/pages/: ref_01.html  ref_02.html  ref_03.html  ref_04.html  ref_05.html  ref_06.html  ref_07.html  ref_08.html  ref_09.html  ref_10.html  ref_11.html  ref_13.html  ref_15.html  ref_16.html  ref_17.html  ref_18.html  ref_20.html  ref_21.html  ref_23.html  ref_24.html
fixtures/output/sources/witnesses/: 99_sources_commitment.witness.json  ref_01.witness.json  ref_02.witness.json  ref_03.witness.json  ref_04.witness.json  ref_05.witness.json  ref_06.witness.json  ref_07.witness.json  ref_08.witness.json  ref_09.witness.json  ref_10.witness.json  ref_11.witness.json  ref_13.witness.json  ref_14.witness.json  ref_15.witness.json  ref_16.witness.json  ref_17.witness.json  ref_18.witness.json  ref_19.witness.json  ref_20.witness.json  ref_21.witness.json  ref_22.witness.json  ref_23.witness.json  ref_24.witness.json  yt_01.witness.json  yt_01_meta.witness.json  yt_04.witness.json  yt_04_meta.witness.json  yt_06.witness.json  yt_06_meta.witness.json  yt_07.witness.json  yt_07_meta.witness.json  yt_08.witness.json  yt_08_meta.witness.json
fixtures/output/witnesses/: 00_source.witness.json  01_midi.witness.json  01_pdf.witness.json  02_wav.witness.json  99_commitment.witness.json
fixtures/scripts/: breed_shamash.py  classical_baseline.py  compose_tile_svgs.sh  composer_rotations.py  cuneiform_resonance.py  cuneiform_strokes.py  era_analysis.py  extract_constraints.py  fetch_wikimedia.sh  fit_shamash.py  generate_bg_tiles.sh  hymn_codec_compare.py  hymn_compress.py  hymn_j_invariant.py  hymn_self_decode.py  hymn_stability.py  ingest_classical.py  ishtar_shamash.py  monster_constraints.py  nft71_frames.sh  nft71_ppm.sh  proto4d.py  proto_stego_svg.py  proto_stego_svg_v2.py  qa_stego.py  render.sh  shamash_animate.py  shamash_encoder.py  shamash_sop.py  shamash_spiral.py  shamash_symmetry.py  test_tile_composite.sh
fixtures/src/: hurrian_h6.rs  lib.rs  witness.rs
frontend/: Trunk.toml
kyc_db/: data.mdb
libs/shared/: Cargo.toml
libs/shared/src/: identifiers.rs  master_pattern.rs  parsers.rs  types.rs
libs/stego/: Cargo.toml
libs/stego/src/: lib.rs
moderation_db/: data.mdb
ops/: retro-sync.service
projects/: README.md
scripts/: artist-ids.py  catalog-gen.py  deploy-hf.sh  deploy-space.sh  export-cwr.py  midi2svg.sh  mint-catalog.py  notebooklm-dump.sh  onboard.sh  pentest.sh  publish-catalog.sh  publish-mints.sh  stego-build.sh  svg2erdfa.sh  test-runner.sh
src/: index.css  lib.rs
tools/: check_png_meta.py  strip_png_gamma.sh  upload_hf.py
zk_circuits/: Cargo.toml
zk_circuits/src/: lib.rs  royalty_split.rs
(+174 files in other folders)
