[workspace]
resolver = "2"
members  = [
    "apps/api-server",
    "apps/wasm-frontend",
    "apps/rust-sandbox",
    "libs/shared",
    "libs/zk-circuits",
    "tools/font_check",
    "tools/btfs-keygen",
    "ops/six-sigma/spc",
    "tools/ceremony",
]

[workspace.package]
version  = "0.1.0"
edition  = "2021"
license  = "AGPL-3.0-or-later"
authors  = ["Retrosync Media Group <platform@retrosync.media>"]

[workspace.dependencies]
# Async runtime
tokio        = { version = "1",  features = ["full"] }
axum         = { version = "0.7", features = ["multipart"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors", "trace"] }

# Serialisation
serde        = { version = "1",  features = ["derive"] }
serde_json   = "1"

# Crypto / ZK
ark-std              = { version = "0.4", features = ["getrandom"] }
ark-ff               = "0.4"
ark-ec               = "0.4"
ark-bn254            = "0.4"
ark-groth16          = "0.4"
ark-relations        = "0.4"
ark-r1cs-std         = "0.4"
ark-snark            = "0.4"
sha2                 = "0.10"
hex                  = "0.4"

# Storage
heed         = "0.20"   # LMDB bindings

# HTTP client
reqwest      = { version = "0.12", features = ["json", "multipart"] }

# Parsing (LangSec)
nom          = "7"

# XML / XSLT
quick-xml    = { version = "0.36", features = ["serialize", "overlapped-lists"] }
xot          = "0.20"   # Pure-Rust XPath 1.0 / XSLT 1.0 processor

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["json", "env-filter"] }

# Time
chrono       = { version = "0.4", features = ["serde"] }

# Error handling
anyhow       = "1"
thiserror    = "1"

# WASM
yew          = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys      = { version = "0.3", features = [
    "Window","Document","HtmlInputElement","File","FileList",
    "FormData","DragEvent","DataTransfer","FileReader",
] }
gloo         = { version = "0.11", features = ["net"] }
