[package]
name    = "fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2         = { workspace = true }
hex          = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
ciborium     = "0.2"
chrono       = { workspace = true }
