[package]
name    = "fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2         = { workspace = true }
hex          = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
ciborium     = "0.2"
chrono       = { workspace = true }
base64       = "0.22"
zk_circuits  = { path = "../libs/zk-circuits" }
ark-bn254    = { workspace = true }
