[package]
name    = "fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2         = { workspace = true }
hex          = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
ciborium     = "0.2"
chrono       = { workspace = true }
base64       = "0.22"
zk_circuits  = { path = "../libs/zk-circuits" }
stego        = { path = "../libs/stego", features = ["png", "svg"] }
png          = "0.17"
toml         = "0.8"
ark-bn254    = { workspace = true }
erdfa-publish = { path = "../nix/erdfa-publish" }

[[example]]
name = "nft71_erdfa"
path = "examples/nft71_erdfa.rs"

[[example]]
name = "verify_stego"
path = "examples/verify_stego.rs"

[[example]]
name = "ecc_zoo"
path = "examples/ecc_zoo.rs"

[[example]]
name = "nft71_stego_svg"
path = "examples/nft71_stego_svg.rs"

[[example]]
name = "nft71_svg"
path = "examples/nft71_svg.rs"

[[example]]
name = "interval_prime"
path = "examples/interval_prime.rs"
