[package]
name    = "zk_circuits"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-std       = { workspace = true }
ark-ff        = { workspace = true }
ark-ec        = { workspace = true }
ark-bn254     = { workspace = true }
ark-groth16   = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std  = { workspace = true }
ark-snark     = { workspace = true }
sha2          = { workspace = true }
anyhow        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
