[package]
name    = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
zkperf-macros = { path = "/mnt/data1/time-2026/03-march/19/zkperf/zkperf-macros" }
zkperf-witness = { path = "/mnt/data1/time-2026/03-march/19/zkperf/zkperf-witness" }
tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
heed         = { workspace = true }
shared          = { path = "../../libs/shared" }
zk_circuits     = { path = "../../libs/zk-circuits" }
erdfa-publish   = { path = "../../nix/erdfa-publish" }
ethers-core      = { version = "2" }
ethers-providers = { version = "2" }
ethers-signers   = { version = "2", features = ["ledger"] }
quick-xml    = { workspace = true }
xot          = { workspace = true }
tower-http   = { workspace = true }
thiserror    = { workspace = true }

[features]
default = []
ledger = []
