[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
js-sys = "0.3.91"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3", features = ["Blob", "Document", "Element", "Node", "SvgElement", "Window", "console"] }

[lib]
crate-type = ["cdylib", "rlib"]
