[package]
name    = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shared"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
nom        = { workspace = true }
sha2       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
