[package]
name    = "stego"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm    = ["wasm-bindgen", "js-sys"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys       = { version = "0.3", optional = true }

[dev-dependencies]
